tests/tokenizer/test_literals.c
'1'
'\r'
'\\'
'\ra' // error
'\s' // error
'a // error